# fishout

./: CMakeLists.txt  README.md  main.c  make.sh  make_codeblock.sh  make_macos.sh
data/: CMakeLists.txt  m_array.c  m_array.h  m_data.c  m_data.h  m_map.c  m_map.h  m_string.c  m_string.h
game/: CMakeLists.txt  actor.c  actor.h  camera.c  camera.h  event.h  game.c  game.h  graphic.h  image.c  image.h  kai.c  kai.h  keycode.h  material.c  material.h  material_3d_default.c  material_3d_default.h  model.c  model.h  scene.c  scene.h  shader.c  shader.h  shader_id.c  shader_id.h  texture.c  texture.h
mac_build/: CMakeCache.txt  cmake_install.cmake
mac_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
mac_build/Debug/: fishout
mac_build/data/: cmake_install.cmake
mac_build/data/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
mac_build/data/data.xcodeproj/: project.pbxproj
mac_build/fishout.xcodeproj/: project.pbxproj
mac_build/game/: cmake_install.cmake
mac_build/game/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
mac_build/game/game.xcodeproj/: project.pbxproj
mac_build/math/: cmake_install.cmake
mac_build/math/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
mac_build/math/math.xcodeproj/: project.pbxproj
mac_build/utils/: cmake_install.cmake
mac_build/utils/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  (+1 more)
math/: CMakeLists.txt  g_math.c  g_math.h  matrix3.h  matrix4.h  quaternion.h  vector2.h  vector3.h  vector4.h
platform/: platform.h
res/: work4.dae
res/model/: kai.dae
res/shaders/: shader_3d.frag  shader_3d.vert
utils/: CMakeLists.txt  conv.h  io.c  io.h  io.m  xml.c  xml.h
(+48 files in other folders)
